Make design-2 the main orders page, remove design variants
- Replace orders index with design-2 layout (stats, quick actions, filters)
- Remove orders-design-1 through design-5 routes and views
- Fix search placeholder: Order number only (not customer name)

Made-with: Cursor

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -186,6 +186,33 @@
     "Fixed commission when order < threshold. Default: 50 SAR": "عمولة ثابتة عندما يكون الطلب < الحد. الافتراضي: 50 ريال",
     "Flat Fee Below Threshold (SAR)": "رسوم ثابتة أقل من الحد (ريال)",
     "Font Family": "عائلة الخط",
+    "font.active_family_help": "اسم عائلة الخط المطبقة على الموقع. تُملأ تلقائياً من رابط جوجل.",
+    "font.active_family_label": "عائلة الخط النشطة",
+    "font.config_tabs": "مصدر الخط",
+    "font.google_url_help": "الصق الرابط الكامل من جوجل فونتس. مثال: https://fonts.googleapis.com/css2?family=Cairo",
+    "font.google_url_label": "رابط جوجل فونتس",
+    "font.preview_arabic": "مرحباً — تسوق من أي متجر في العالم",
+    "font.preview_english": "Hello — Shop from any store worldwide",
+    "font.preview_label": "معاينة",
+    "font.saved": "تم حفظ إعدادات الخط. التغييرات تطبق على الموقع كاملاً.",
+    "font.section_description": "اختر خطاً مخصصاً عبر رابط جوجل فونتس أو ارفع ملفك الخاص.",
+    "font.section_title": "خط الموقع",
+    "font.source_default": "افتراضي (إنتر + آي بي إم بلكس سانس عربي)",
+    "font.source_default_help": "استخدام الخطوط المدمجة.",
+    "font.source_google": "خط جوجل",
+    "font.source_google_help": "الصق رابط جوجل فونتس. تُستخرج عائلة الخط تلقائياً.",
+    "font.source_label": "مصدر الخط",
+    "font.source_upload": "رفع خط",
+    "font.source_upload_help": "ارفع .ttf أو .woff أو .woff2. يُخزن في storage/app/public/fonts/.",
+    "font.tab_google": "خط جوجل",
+    "font.tab_upload": "رفع خط",
+    "font.upload_family_help": "اسم عائلة الخط لـ @font-face. يجب أن يطابق ملف الخط.",
+    "font.upload_family_label": "اسم عائلة الخط",
+    "font.upload_family_placeholder": "مثال: خطي المخصص",
+    "font.upload_family_required": "اسم عائلة الخط مطلوب عند استخدام رفع الخط.",
+    "font.upload_help": "ارفع .ttf أو .woff أو .woff2. الحد الأقصى ٢ ميغابايت.",
+    "font.upload_label": "ملف الخط",
+    "font.upload_required": "يرجى رفع ملف خط عند استخدام خيار رفع الخط.",
     "Footer": "التذييل",
     "Footer Scripts (before </body>)": "سكريبتات التذييل (قبل </body>)",
     "Forgot password?": "نسيت كلمة المرور؟",
@@ -297,6 +324,11 @@
     "Shown at top of invoice. Leave empty to use main site logo.": "يظهر في أعلى الفاتورة. اتركه فارغاً لاستخدام شعار الموقع الرئيسي.",
     "Shown on invoice header. Leave empty to use main site name.": "يظهر في رأس الفاتورة. اتركه فارغاً لاستخدام اسم الموقع الرئيسي.",
     "Use per-language logo and text": "استخدام شعار ونص مختلفين لكل لغة",
+    "Use per-language logo image": "استخدام صورة شعار مختلفة لكل لغة",
+    "Use per-language logo text": "استخدام نص شعار مختلف لكل لغة",
+    "When ON, you can upload a different logo image for Arabic and English.": "عند التفعيل، يمكنك رفع صورة شعار مختلفة للعربية والإنجليزية.",
+    "When ON, text logo is localized (different text for Arabic and English). When OFF, one text is used for both. Recommended: ON.": "عند التفعيل، نص الشعار يكون مترجماً (نص مختلف للعربية والإنجليزية). عند الإيقاف، يُستخدم نص واحد للغتين. يُنصح بالتفعيل.",
+    "Shown when no logo image is uploaded. Used for both Arabic and English when per-language text is OFF.": "يظهر عند عدم رفع صورة للشعار. يُستخدم للعربية والإنجليزية عند إيقاف النص لكل لغة.",
     "Used in img alt attribute for accessibility and SEO. Leave empty to use logo text.": "يُستخدم في خاصية alt للصورة لتحسين إمكانية الوصول ومحركات البحث. اتركه فارغاً لاستخدام نص الشعار.",
     "Used in img alt for Arabic pages. Leave empty to use logo text.": "يُستخدم في alt لصفحات العربية. اتركه فارغاً لاستخدام نص الشعار.",
     "Used in img alt for English pages. Leave empty to use logo text.": "يُستخدم في alt لصفحات الإنجليزية. اتركه فارغاً لاستخدام نص الشعار.",
@@ -411,6 +443,14 @@
     "Orders Today": "طلبات اليوم",
     "Orders/hour — Admin": "الطلبات/الساعة — المدير",
     "Orders/hour — Customer": "الطلبات/الساعة — العميل",
+    "Orders/day — Admin": "الطلبات/اليوم — المدير",
+    "Orders/day — Customer": "الطلبات/اليوم — العميل",
+    "Orders/month — Admin": "الطلبات/الشهر — المدير",
+    "Orders/month — Customer": "الطلبات/الشهر — العميل",
+    "Max orders per user per day. 0 = unlimited.": "الحد الأقصى للطلبات لكل مستخدم يومياً. 0 = بدون حد.",
+    "Max orders per staff per day. 0 = unlimited.": "الحد الأقصى للطلبات لكل موظف يومياً. 0 = بدون حد.",
+    "Max orders per user per month. 0 = unlimited.": "الحد الأقصى للطلبات لكل مستخدم شهرياً. 0 = بدون حد.",
+    "Max orders per staff per month. 0 = unlimited.": "الحد الأقصى للطلبات لكل موظف شهرياً. 0 = بدون حد.",
     "Other": "أخرى",
     "Other currency notice": "بما أن هذه العملة غير متاحة في القائمة حاليًا، يمكنك إضافة المنتج وسنتولى حساب التكلفة يدويًا.",
     "Our team reviews your order and purchases the items on your behalf.": "فريقنا يراجع طلبك ويشتري المنتجات نيابةً عنك.",
@@ -1280,6 +1320,7 @@
     "order.currency_try": "ليرة تركية",
     "order.currency_usd": "دولار أمريكي",
     "order.daily_limit_reached": "لقد تجاوزت الحد الأقصى من الطلبات اليومية (:max طلبات). يُرجى المحاولة غداً.",
+    "order.monthly_limit_reached": "لقد تجاوزت الحد الأقصى من الطلبات الشهرية (:max طلبات). يُرجى المحاولة الشهر القادم.",
     "order.enter_prices_for_estimate": "أدخل الأسعار لحساب التكلفة التقريبية",
     "order.estimated_total": "التكلفة التقريبية",
     "order.field_color": "اللون",
@@ -1447,6 +1488,22 @@
     "orders.invoice_custom_filename_placeholder": "اتركه فارغاً لاستخدام النمط الافتراضي",
     "orders.invoice_custom_filename_hint": "المتغيرات: {order_number}, {date}, {type}, {site_name}, {count}",
     "orders.invoice_date": "التاريخ",
+    "orders.invoice_number": "رقم الفاتورة",
+    "orders.invoice_number_pattern": "صيغة رقم الفاتورة",
+    "orders.invoice_number_pattern_help": "نمط أرقام الفواتير. المتغيرات: {order_number}, {count}. مثال: {order_number}-{count} → 72911-1",
+    "orders.invoice_show_type_label": "عرض نوع الفاتورة",
+    "orders.invoice_show_type_label_help": "عرض تسمية (مثل الدفعة الأولى، النهائية) ليعرف العميل أي فاتورة هي.",
+    "orders.invoice_type_labels": "تجاوز تسميات نوع الفاتورة",
+    "orders.invoice_type_labels_help": "تجاوز التسميات الافتراضية لكل نوع. المفتاح = النوع (first_payment, second_final, items_cost, general). اتركه فارغاً للافتراضي.",
+    "orders.invoice_show_company_details": "عرض بيانات الشركة",
+    "orders.invoice_show_company_details_help": "عرض العنوان، الرقم الضريبي، الهاتف، إلخ على الفاتورة.",
+    "orders.invoice_company_details": "بيانات الشركة",
+    "orders.invoice_company_address": "العنوان",
+    "orders.invoice_show_due_date": "عرض تاريخ الاستحقاق",
+    "orders.invoice_show_due_date_help": "عرض تاريخ استحقاق الدفع على الفاتورة.",
+    "orders.invoice_due_date_days": "تاريخ الاستحقاق (أيام من تاريخ الفاتورة)",
+    "orders.invoice_due_date_label": "تسمية تاريخ الاستحقاق",
+    "orders.invoice_due_date": "تاريخ الاستحقاق",
     "orders.invoice_detailed": "تفصيلية (مع تفاصيل المنتجات)",
     "orders.invoice_for": "فاتورة الطلب رقم :number",
     "orders.order_confirmation_email_subject": "تأكيد الطلب :number — :site_name",
@@ -1571,7 +1628,6 @@
     "orders.save": "حفظ",
     "orders.save_changes": "حفظ التعديلات",
     "orders.save_prices": "حفظ الأسعار",
-    "orders.search_placeholder": "رقم الطلب أو اسم العميل...",
     "orders.select_address": "اختر العنوان",
     "orders.send": "إرسال",
     "orders.send_confirmation_email": "إرسال بريد تأكيد الطلب",
@@ -1855,6 +1911,7 @@
     "account.orders_total": "إجمالي الطلبات",
     "account.orders_active": "طلبات نشطة",
     "account.orders_shipped": "تم الشحن",
+    "account.orders_delivered": "تم التسليم",
     "account.orders_cancelled": "ملغاة",
     "account.quick_new_order": "إضافة طلب جديد",
     "account.quick_my_orders": "طلباتي",
