--- a/lang/en.json
+++ b/lang/en.json
@@ -186,6 +186,33 @@
     "Fixed commission when order < threshold. Default: 50 SAR": "Fixed commission when order < threshold. Default: 50 SAR",
     "Flat Fee Below Threshold (SAR)": "Flat Fee Below Threshold (SAR)",
     "Font Family": "Font Family",
+    "font.active_family_help": "Font family name applied site-wide. Auto-filled from Google URL for Option 1.",
+    "font.active_family_label": "Active Font Family",
+    "font.config_tabs": "Font Source",
+    "font.google_url_help": "Paste the full URL from Google Fonts. Example: https://fonts.googleapis.com/css2?family=Cairo",
+    "font.google_url_label": "Google Fonts URL",
+    "font.preview_arabic": "مرحباً — تسوق من أي متجر في العالم",
+    "font.preview_english": "Hello — Shop from any store worldwide",
+    "font.preview_label": "Preview",
+    "font.saved": "Font settings saved. Changes apply site-wide.",
+    "font.section_description": "Choose a custom font via Google Fonts URL or upload your own font file.",
+    "font.section_title": "Site Font",
+    "font.source_default": "Default (Inter + IBM Plex Sans Arabic)",
+    "font.source_default_help": "Use the built-in fonts.",
+    "font.source_google": "Google Font",
+    "font.source_google_help": "Paste a Google Fonts URL. Font family is extracted automatically.",
+    "font.source_label": "Font Source",
+    "font.source_upload": "Upload Font",
+    "font.source_upload_help": "Upload .ttf, .woff, or .woff2. Store in storage/app/public/fonts/.",
+    "font.tab_google": "Google Font",
+    "font.tab_upload": "Upload Font",
+    "font.upload_family_help": "Font family name for @font-face. Must match the font file.",
+    "font.upload_family_label": "Font Family Name",
+    "font.upload_family_placeholder": "e.g. My Custom Font",
+    "font.upload_family_required": "Font family name is required when using Upload Font.",
+    "font.upload_help": "Upload .ttf, .woff, or .woff2. Max 2 MB.",
+    "font.upload_label": "Font File",
+    "font.upload_required": "Please upload a font file when using Upload Font.",
     "Footer": "Footer",
     "Footer Scripts (before </body>)": "Footer Scripts (before </body>)",
     "Forgot password?": "Forgot password?",
@@ -297,6 +324,11 @@
     "Shown at top of invoice. Leave empty to use main site logo.": "Shown at top of invoice. Leave empty to use main site logo.",
     "Shown on invoice header. Leave empty to use main site name.": "Shown on invoice header. Leave empty to use main site name.",
     "Use per-language logo and text": "Use per-language logo and text",
+    "Use per-language logo image": "Use per-language logo image",
+    "Use per-language logo text": "Use per-language logo text",
+    "When ON, you can upload a different logo image for Arabic and English.": "When ON, you can upload a different logo image for Arabic and English.",
+    "When ON, text logo is localized (different text for Arabic and English). When OFF, one text is used for both. Recommended: ON.": "When ON, text logo is localized (different text for Arabic and English). When OFF, one text is used for both. Recommended: ON.",
+    "Shown when no logo image is uploaded. Used for both Arabic and English when per-language text is OFF.": "Shown when no logo image is uploaded. Used for both Arabic and English when per-language text is OFF.",
     "Used in img alt attribute for accessibility and SEO. Leave empty to use logo text.": "Used in img alt attribute for accessibility and SEO. Leave empty to use logo text.",
     "Used in img alt for Arabic pages. Leave empty to use logo text.": "Used in img alt for Arabic pages. Leave empty to use logo text.",
     "Used in img alt for English pages. Leave empty to use logo text.": "Used in img alt for English pages. Leave empty to use logo text.",
@@ -411,6 +443,14 @@
     "Orders Today": "Orders Today",
     "Orders/hour — Admin": "Orders/hour — Admin",
     "Orders/hour — Customer": "Orders/hour — Customer",
+    "Orders/day — Admin": "Orders/day — Admin",
+    "Orders/day — Customer": "Orders/day — Customer",
+    "Orders/month — Admin": "Orders/month — Admin",
+    "Orders/month — Customer": "Orders/month — Customer",
+    "Max orders per user per day. 0 = unlimited.": "Max orders per user per day. 0 = unlimited.",
+    "Max orders per staff per day. 0 = unlimited.": "Max orders per staff per day. 0 = unlimited.",
+    "Max orders per user per month. 0 = unlimited.": "Max orders per user per month. 0 = unlimited.",
+    "Max orders per staff per month. 0 = unlimited.": "Max orders per staff per month. 0 = unlimited.",
     "Other": "Other",
     "Other currency notice": "This currency is not listed. Add the product and we'll calculate the cost manually.",
     "Our team reviews your order and purchases the items on your behalf.": "Our team reviews your order and purchases the items on your behalf.",
@@ -1280,6 +1320,7 @@
     "order.currency_try": "Turkish Lira",
     "order.currency_usd": "US Dollar",
     "order.daily_limit_reached": "You've reached the daily order limit of :max orders. Please try again tomorrow.",
+    "order.monthly_limit_reached": "You've reached the monthly order limit of :max orders. Please try again next month.",
     "order.enter_prices_for_estimate": "Enter prices to see estimated total",
     "order.estimated_total": "Estimated Total",
     "order.field_color": "Color",
@@ -1447,6 +1488,22 @@
     "orders.invoice_custom_filename_placeholder": "Leave empty to use default pattern",
     "orders.invoice_custom_filename_hint": "Placeholders: {order_number}, {date}, {type}, {site_name}, {count}",
     "orders.invoice_date": "Date",
+    "orders.invoice_number": "Invoice number",
+    "orders.invoice_number_pattern": "Invoice number format",
+    "orders.invoice_number_pattern_help": "Pattern for invoice numbers. Placeholders: {order_number}, {count}. Example: {order_number}-{count} → 72911-1",
+    "orders.invoice_show_type_label": "Show invoice type label",
+    "orders.invoice_show_type_label_help": "Display a label (e.g. First Payment, Final) so the customer knows which invoice it is.",
+    "orders.invoice_type_labels": "Invoice type label overrides",
+    "orders.invoice_type_labels_help": "Override default labels per type. Key = type (first_payment, second_final, items_cost, general). Leave empty to use default.",
+    "orders.invoice_show_company_details": "Show company details",
+    "orders.invoice_show_company_details_help": "Display address, tax/VAT ID, phone, etc. on the invoice.",
+    "orders.invoice_company_details": "Company details",
+    "orders.invoice_company_address": "Address",
+    "orders.invoice_show_due_date": "Show due date",
+    "orders.invoice_show_due_date_help": "Display a payment due date on the invoice.",
+    "orders.invoice_due_date_days": "Due date (days from invoice)",
+    "orders.invoice_due_date_label": "Due date label",
+    "orders.invoice_due_date": "Due date",
     "orders.invoice_detailed": "Detailed (with item breakdown)",
     "orders.invoice_for": "Invoice for Order :number",
     "orders.order_confirmation_email_subject": "Order :number confirmation — :site_name",
@@ -1571,7 +1628,7 @@
     "orders.save": "Save",
     "orders.save_changes": "Save changes",
     "orders.save_prices": "Save Prices",
-    "orders.search_placeholder": "Order number or customer name...",
+    "orders.search_placeholder": "Order number...",
     "orders.select_address": "Select Address",
     "orders.send": "Send",
     "orders.send_confirmation_email": "Send Order Confirmation Email",
@@ -1859,6 +1916,7 @@
     "account.orders_total": "Total Orders",
     "account.orders_active": "Active",
     "account.orders_shipped": "Shipped",
+    "account.orders_delivered": "Delivered",
     "account.orders_cancelled": "Cancelled",
     "account.quick_new_order": "Add a new order",
     "account.quick_my_orders": "My Orders",
