Add order form design prototypes (design-1, -2, -3), OrderDesignController, font/logo helpers, and related updates
Made-with: Cursor

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1271,6 +1271,7 @@
     "order_form.products_count": "عدد المنتجات",
     "order_form.products_value": "قيمة المنتجات",
     "order_form.remove": "حذف",
+    "order_form.remove_row": "حذف السطر",
     "order_form.reset_all": "مسح جميع المنتجات المدخلة",
     "order_form.reset_confirm": "سيتم مسح كامل البيانات التي أدخلتها. هل ترغب بالاستمرار بالمسح؟",
     "order_form.reset_desc": "لاستعادة كلمة المرور، يرجى زيارة صفحة تسجيل الدخول الرئيسية.",
@@ -1283,7 +1284,7 @@
     "order_form.th_currency": "العملة",
     "order_form.th_files": "المرفقات",
     "order_form.th_notes": "ملاحظات",
-    "order_form.th_num": "الرقم",
+    "order_form.th_num": "رقم المنتج",
     "order_form.th_price": "السعر",
     "order_form.th_qty": "العدد",
     "order_form.th_size": "المقاس",
@@ -1300,6 +1301,13 @@
     "order_form.tips_title": "نصائح سريعة قبل الطلب",
     "order_form.url_placeholder": "الصق رابط المنتج (أو وصفه إن لم يوجد رابط)",
     "order_form.welcome_back": "أهلاً بعودتك! أدخل كلمة المرور",
+    "design_demo.production_form": "النموذج الأساسي",
+    "design_demo.design_1": "التصميم ١",
+    "design_demo.design_2": "التصميم ٢",
+    "design_demo.design_3": "التصميم ٣",
+    "design_demo.subtitle_1": "جدول HTML بسيط",
+    "design_demo.subtitle_2": "جدول HTML مدمج (لمستخدمي القوة)",
+    "design_demo.subtitle_3": "جدول HTML مع تثبيت العناوين (للقوائم الطويلة)",
     "or": "أو",
     "order(s)": "طلب",
     "order.add_at_least_one_product": "يجب إضافة منتج واحد على الأقل.",
