--- a/lang/en.json
+++ b/lang/en.json
@@ -1271,6 +1271,7 @@
     "order_form.products_count": "Products",
     "order_form.products_value": "Products Value",
     "order_form.remove": "Remove",
+    "order_form.remove_row": "Remove row",
     "order_form.reset_all": "Clear All Entered Products",
     "order_form.reset_confirm": "This will clear all entered data. Do you want to continue?",
     "order_form.reset_desc": "To reset your password, please visit the main login page.",
@@ -1283,7 +1284,7 @@
     "order_form.th_currency": "Currency",
     "order_form.th_files": "Files",
     "order_form.th_notes": "Notes",
-    "order_form.th_num": "No.",
+    "order_form.th_num": "Product No.",
     "order_form.th_price": "Price",
     "order_form.th_qty": "Qty",
     "order_form.th_size": "Size",
@@ -1300,6 +1301,13 @@
     "order_form.tips_title": "Quick Tips Before Ordering",
     "order_form.url_placeholder": "Paste product link (or describe it if no link)",
     "order_form.welcome_back": "Welcome back! Enter your password",
+    "design_demo.production_form": "Production form",
+    "design_demo.design_1": "Design 1",
+    "design_demo.design_2": "Design 2",
+    "design_demo.design_3": "Design 3",
+    "design_demo.subtitle_1": "HTML table, minimal",
+    "design_demo.subtitle_2": "HTML table, compact (power user)",
+    "design_demo.subtitle_3": "HTML table, sticky header (scroll long lists)",
     "or": "or",
     "order(s)": "order(s)",
     "order.add_at_least_one_product": "Please add at least one product.",
